--- a/L4/Variables-and-data-types.ipynb
+++ b/L4/Variables-and-data-types.ipynb
@@ -148,24 +148,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "436a9ebb",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'true' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m is_active = \u001b[43mtrue\u001b[49m\n\u001b[32m      2\u001b[39m is_active\n",
-      "\u001b[31mNameError\u001b[39m: name 'true' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "is_active = true\n",
+    "is_active = True\n",
     "is_active"
    ]
   },
